--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover">
-    <title>QIWEI奇伟</title>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="keywords" content="汕头市奇伟实业有限公司" />
+    <meta
+      name="description"
+      content="汕头市奇伟实业有限公司一贯重视科技创新，重视培养自主的研发力量，目前拥有40
+    多项核心专利（其中18项是发明专利）和8份著作权，涵盖产品配
+    方、设备、包装等多层次、全方位、宽领域的知识产权矩阵，部分
+    填补了国内、外空白，极大的提高了我司产品在市场的竞争力。
+    公司通过ISO22716和GMPC认证，先后被认定为“市级企业技术
+    中心”、“市级工程技术研究开发中心”、“省级工程技术研究开
+    发中心”、“高新技术企业”、“专精特新中小企业”和“创新型
+    中小企业”等资质。"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover"
+    />
+    <title>汕头市奇伟实业有限公司</title>
   </head>
   <body>
     <div id="app"></div>
