--- a/index.html
+++ b/index.html
@@ -24,5 +24,10 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <!-- <script type="text/javascript">
+      window._AMapSecurityConfig = {
+        securityJsCode: "b5ba0a4a12c605fe209e8ff6db441fc6",
+      };
+    </script> -->
   </body>
 </html>
